tests/NormalTests/paczka2/big_fuzzy/87492056.err
Error in line 1: kSJXvt2a A585 75,9
Error in line 4: kSJXvt2a S401 60,9
Error in line 9: lOFD S401 50,2
Error in line 13: iJI S401 85,F
Error in line 16: iJI S401 286,0
Error in line 33: q7fzkV A847 25,3
Error in line 44: lOFD A585 82,7
Error in line 55: lOFD A75 101,2
Error in line 71: 0Y5b A585 55,5
Error in line 79: iJI A847 26,4
Error in line 83: iJI S401 0,3
Error in line 75: q7fzkV A75 34,1
Error in line 85: iJI A75 91,9
Error in line 80: nX3GtlS5CBf A847 57,6
Error in line 92: iJI A847 96,1
Error in line 87: S401 A847 38,9
Error in line 101: lOFD S401 50,99
Error in line 93: lOFD A847 306,2
Error in line 111: q7fzkV A75 31,6
Error in line 109: nX3GtlS5CBf A847 43,5
Error in line 130: iJI A75 47,8
Error in line 102: lOFD S401 224,0
Error in line 135: q7fzkV A75 23,3
Error in line 134: lOFD A75 85,9
Error in line 137: 0Y5b A847 20,9
Error in line 136: q7fzkV A847 95,1
Error in line 133: iJI A585 71,5
Error in line 148: iJI A75 83,5
Error in line 145: lOFD A847 9,7
Error in line 141: 0Y5b A585 78,3
Error in line 152: lOFD S401 99,9
Error in line 153: nX3GtlS5CBf A585 37,2
Error in line 166: nX3GtlS5CBf S401 81,2
Error in line 172: iJI A585 48,68
Error in line 173: iJI A585 206,9
Error in line 156: 0Y5b A847 35,5
Error in line 183: 0Y5b A585 -5,1
Error in line 185: kSJXvt2a A847 12,84
Error in line 178: S401 A847 72,2
Error in line 180: kSJXvt2a A847 6,3
Error in line 198: iJI A75 36,8
Error in line 202: kSJXvt2a A75 10,7
Error in line 201: nX3GtlS5CBf A847 37,6
Error in line 209: iJI A585 87,6
Error in line 210: iJI A75 32,6
Error in line 206: nX3GtlS5CBf A75 15,9
Error in line 220: nX3GtlS5CBf S401 24,3
Error in line 235: q7fzkV A585 90,88
Error in line 241: q7fzkV S4I1 81,9
Error in line 240: nX3GtlS5CBf A75 21,8
Error in line 233: q7fzkV A75 58,3
Error in line 244: nX3GtlS5CBf A585 161,0
Error in line 245: q7fzkV S401 120,4
